# vtg

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
benches/: form_serialize.rs
examples/: bot.rs  commands.rs
examples/commands/: api.rs  attachments.rs  keyboard.rs  mod.rs  send.rs
src/: client.rs  commands.rs  keyboard.rs  lib.rs  main.rs  server.rs  structs.rs  upload.rs
src/client/: api_requests.rs  requests.rs  structs.rs
src/structs/: attachments.rs  config.rs  context.rs  keyboard.rs  middleware.rs  struct_to_vec.rs  tg.rs  tg_api.rs  tg_attachments.rs  upload.rs  vk.rs  vk_api.rs  vk_attachments.rs
src/tests/: mod.rs
