[package]
name = "vtg"
version = "1.0.2"
edition = "2021"
authors = ["Vyacheslav Shteyn <ms.vana32@gmail.com>"]
license = "MIT"
description = "Library for creating VK and Telegram bots"
readme = "README.md"
homepage = "https://github.com/valnesfjord/vtg"
repository = "https://github.com/valnesfjord/vtg"
keywords = ["bots", "vk", "telegram", "api", "tg"]
categories = ["web-programming", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-rustls = { version = "0.24.1", features = ["http2"] }
serde_json = "1.0.105"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
form_urlencoded = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["macros"] }
lazy_static = "1.4.0"
rand = "0.8.5"
log = "0.4"
[dev-dependencies]
httpmock = "0.6"
regex = "1.9.3"
regex-automata = "0.3.6"
env_logger = "0.9"
