[package]
name = "vtg"
version = "1.1.1"
edition = "2024"
authors = ["Vyacheslav Shteyn <ms.vana32@gmail.com>"]
license = "MIT"
description = "Library for creating VK and Telegram bots"
readme = "README.md"
homepage = "https://github.com/valnesfjord/vtg"
repository = "https://github.com/valnesfjord/vtg"
keywords = ["bots", "vk", "telegram", "api", "tg"]
categories = ["web-programming", "api-bindings"]
exclude = ["examples/*"]

[dependencies]
hyper-tls = { version = "0.6.0", features = ["alpn"] }
serde_json = "1.0.105"
hyper = { version = "1.5.2", features = ["full"] }
bytes = "1.6.0"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1.1"
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["macros"] }
lazy_static = "1.4.0"
rand = "0.8.5"
log = "0.4"

[dev-dependencies]
regex-automata = "0.3.6"
env_logger = "0.9"
criterion = "0.5"

[[bench]]
name = "form_serialize"
harness = false
